[gd_scene load_steps=9 format=2]

[ext_resource path="res://resources/theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/views/mapView.gd" type="Script" id=2]
[ext_resource path="res://sprites/side_button.png" type="Texture" id=3]
[ext_resource path="res://sprites/map.jpg" type="Texture" id=4]
[ext_resource path="res://scripts/views/map_elements/leftBar.gd" type="Script" id=5]
[ext_resource path="res://resources/name_font.tres" type="DynamicFont" id=6]

[sub_resource type="Animation" id=1]
resource_name = "hide"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.435275, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -721, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "show"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 0.435275 ),
"update": 0,
"values": [ Vector2( -721, 0 ), Vector2( 0, 0 ) ]
}

[node name="mapView" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="background" type="ColorRect" parent="."]
margin_right = 720.0
margin_bottom = 1280.0

[node name="toolBar" type="Control" parent="."]
editor/display_folded = true
margin_right = 720.0
margin_bottom = 100.0

[node name="background" type="ColorRect" parent="toolBar"]
margin_right = 720.0
margin_bottom = 100.0
color = Color( 0.752941, 0.8, 0.854902, 1 )

[node name="Label" type="Label" parent="toolBar"]
margin_left = 111.5
margin_top = 23.0
margin_right = 213.5
margin_bottom = 77.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "DLVR"

[node name="sideMenuButton" type="TextureButton" parent="toolBar"]
margin_left = 5.0
margin_top = 5.0
margin_right = 105.0
margin_bottom = 105.0
rect_scale = Vector2( 0.9, 0.9 )
shortcut_in_tooltip = false
texture_normal = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 10.0
margin_top = 240.0
margin_right = 710.0
margin_bottom = 940.0
rect_min_size = Vector2( 700, 700 )
texture = ExtResource( 4 )
expand = true

[node name="leftBar" type="Control" parent="."]
editor/display_folded = true
margin_left = -721.0
margin_right = -1.0
margin_bottom = 1280.0
script = ExtResource( 5 )

[node name="background" type="ColorRect" parent="leftBar"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 600, 1280 )
color = Color( 0.117647, 0.176471, 0.243137, 1 )

[node name="anim" type="AnimationPlayer" parent="leftBar"]
anims/hide = SubResource( 1 )
anims/show = SubResource( 2 )

[node name="back" type="TextureButton" parent="leftBar"]
margin_left = 600.0
margin_top = -1.22772
margin_right = 720.0
margin_bottom = 1278.77
rect_min_size = Vector2( 100, 0 )

[node name="header" type="ColorRect" parent="leftBar"]
editor/display_folded = true
margin_right = 600.0
margin_bottom = 213.0
color = Color( 0.14902, 0.203922, 0.270588, 1 )

[node name="dlvrLabel" type="Label" parent="leftBar/header"]
margin_left = 100.0
margin_top = 50.0
margin_right = 201.2
margin_bottom = 103.2
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "DLVR"

[node name="nameLabel" type="Label" parent="leftBar/header"]
margin_left = 100.0
margin_top = 110.0
margin_right = 331.2
margin_bottom = 163.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Nome Sobrenome"
[connection signal="pressed" from="toolBar/sideMenuButton" to="." method="_on_sideMenuButton_pressed"]
[connection signal="pressed" from="leftBar/back" to="leftBar" method="_on_back_pressed"]
